[tool.black]


[tool.isort]
profile = "black"


[tool.poetry]
name = "rest-course"
version = "0.1.0"
description = "REST API Course"
authors = ["Gavrie Philipson <gavrie@philipson.co.il>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
redis = "^4.0.2"
httpx = {extras = ["cli"], version = "^0.21.1"}
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.30.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
